feat(back): 新增鉴权统一响应与错误码